<resources>
    <string name="app_name">FRAA</string>
    <string name="picture_button">Take picture</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="eigenfaces">Eigenfaces</string>
    <string name="fisherfaces">Fisherfaces</string>
    <string name="threshold_face">Face threshold:</string>
    <string name="threshold_distance">Distance threshold:</string>
    <string name="maximum_images">Maximum number of images:</string>
    <string name="clear_button">Clear training set</string>
    <string name="flip">Flip</string>
    <string name="title_activity_in_out">InOutActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_employee">Add Employee</string>
    <string name="checkin_attendance">CheckIn Attendance</string>
    <string name="add_new_employee">Add New Employee</string>
</resources>
