<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:SeekBarArrows="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".FaceRecognitionAppActivity"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/nav_header_main" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/arrow_text_margin"
                android:layout_marginTop="@dimen/arrow_text_margin"
                android:layout_marginRight="@dimen/arrow_text_margin"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fisherfaces"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fisherfaces" />

                    <RadioButton
                        android:id="@+id/eigenfaces"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/eigenfaces" />

                </RadioGroup>

                <com.furqan.facerecognitionattendaceapp.SeekBarArrows
                    android:id="@+id/threshold_face"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    SeekBarArrows:max=".5"
                    SeekBarArrows:n_values="500"
                    SeekBarArrows:text="@string/threshold_face" />

                <com.furqan.facerecognitionattendaceapp.SeekBarArrows
                    android:id="@+id/threshold_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    SeekBarArrows:max=".5"
                    SeekBarArrows:n_values="500"
                    SeekBarArrows:text="@string/threshold_distance" />

                <com.furqan.facerecognitionattendaceapp.SeekBarArrows
                    android:id="@+id/maximum_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    SeekBarArrows:max="100"
                    SeekBarArrows:min="1"
                    SeekBarArrows:n_values="100"
                    SeekBarArrows:text="@string/maximum_images" />

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/arrow_text_margin"
                    android:text="@string/clear_button" />

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
